# multi-modal-electronic-agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: state.py  vision_agent.py
app/api/routes/: health.py  identify.py  voice_identify.py  ws_identify.py
app/core/: config.py
app/schemas/: agent.py  components.py  voice.py  websocket.py
app/services/: image_processing.py  model_client.py  rate_limit.py  session_memory.py  transcription.py  vision.py
app/websocket/: manager.py  protocol.py
tests/: test_health.py
