[project]
name = "multi-modal"
version = "0.1.0"
description = "FastAPI application scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "langchain-groq",
    "langchain-openai",
    "langgraph",
    "openai",
    "pillow",
    "python-multipart",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
